# linuxtrack-qt6

./: .gitignore  CMakeLists.txt  build.sh  conanfile.py  graph.txt  requirements.txt  setup.sh
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/fakeusb/: CMakeLists.txt
src/lib/linuxtrack/: CMakeLists.txt
src/lib/ltr/: CMakeLists.txt
src/lib/macwc/: CMakeLists.txt
src/lib/macwii/: CMakeLists.txt
src/lib/p3e/: CMakeLists.txt
src/lib/tir/: CMakeLists.txt
src/lib/usb1/: CMakeLists.txt
src/lib/utils/: config_test.h
src/lib/wc/: CMakeLists.txt
src/lib/wii/: CMakeLists.txt
src/linuxtrack/: CMakeLists.txt  utils.c
src/linuxtrack/ft/: CMakeLists.txt
src/linuxtrack/joy/: CMakeLists.txt
src/linuxtrack/linuxtrack/: CMakeLists.txt
src/linuxtrack/ltr/: pathconfig.h
src/linuxtrack/ltr_extractor/: CMakeLists.txt
src/linuxtrack/macwii/: CMakeLists.txt
src/linuxtrack/osc_server/: CMakeLists.txt
src/linuxtrack/tir/: CMakeLists.txt
src/linuxtrack/utils/: CMakeLists.txt  utils.c
src/linuxtrack/wc/: CMakeLists.txt
src/linuxtrack/xlinuxtrack9/: CMakeLists.txt
